Fix transparency of light nav background on mobile

--- a/resources/style/_nav-light.scss
+++ b/resources/style/_nav-light.scss
@@ -15,6 +15,6 @@ nav#main {
         }
     }
     @media(max-width:850px) {
-        background-color: adjust-color($background, $alpha: -0.94) !important;
+        background-color: adjust-color($background, $alpha: -0.06) !important;
     }
 }
