--- a/resources/style/index.css
+++ b/resources/style/index.css
@@ -15,7 +15,7 @@ nav#main {
       color: #587e72; }
   @media (max-width: 850px) {
     nav#main {
-      background-color: rgba(250, 250, 250, 0.06) !important; } }
+      background-color: rgba(250, 250, 250, 0.94) !important; } }
 div.banner.hero {
   background-color: #fff;
   background-image: url(/resources/img/bgtile.webp);
